feat: webvr support

--- a/app/app/content/index.html
+++ b/app/app/content/index.html
@@ -1,2 +1,8 @@
-<img src="/assets/img/hello.png" alt="hello.png from app/assets/img/"/>
-<h1>Hello World from app/content/index.html</h1>
+
+  <body style='margin : 0px; overflow: hidden;'>
+    <a-scene embedded arjs> 
+
+      <a-box position='0 0.5 0' material='opacity: 0.9 ;'></a-box> 
+      <a-marker-camera preset='custom' type='pattern' url='assets/pattern-marker.patt'></a-marker-camera>
+    </a-scene>
+  </body>
