--- a/web/public/index.html
+++ b/web/public/index.html
@@ -20,6 +20,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <script src="https://aframe.io/releases/0.7.0/aframe.min.js"></script>
   </head>
   <body>
     <noscript>
