--- a/web/public/index.html
+++ b/web/public/index.html
@@ -19,8 +19,15 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>PolARbits wishes!</title>
     <script src="https://aframe.io/releases/0.7.0/aframe.min.js"></script>
+    <style type="text/css">
+    
+    #arjsDebugUIContainer {
+      display:none!important;
+    }
+    </style>
+    <script src="/assets/js/arjs.js"> </script>
   </head>
   <body>
     <noscript>
