feat: facebook and portrait detection

--- a/app/app/content/wish/index.html
+++ b/app/app/content/wish/index.html
@@ -26,3 +26,12 @@
         
         <a-entity camera></a-entity>
     </a-scene>
+
+    <div class="rotate">
+        <img src="/assets/img/rotate-smartphone.png" alt="rotate"/>
+        <span class="rotate__description">Please turn your device into landscape mode.</span>      
+      </div>
+
+      <div class="facebook"> 
+        <span class="rotate__description">Please tap <img src="/assets/img/menu.png" alt="menu"/> and open the page in your browser.</span>      
+      </div>
