--- a/app/app/content/index.html
+++ b/app/app/content/index.html
@@ -35,7 +35,7 @@
           Wishes:
           <input type="text" name="wishes" pattern=".{3,}" required title="3 characters minimum" />
         </label>
-        <button class="form__send send--js" value="Submit">Send wishes</button>
+        <button class="form__send send--js" type="submit" value="Submit">Send wishes</button>
       </div>
     </form>
 
